--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">nkosiphendule</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+                        5306 orange farm ext2 Street · 1841 · (063) 424-4380 ·
                         <a href="mailto:name@email.com">ydomagazi0108@email.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
